# scraped_data

./: .buildinfo  .gitignore  biletebi.html  genindex.html  info.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  results.json  search.html  searchindex.js
_sources/: biletebi.ipynb  info.ipynb
myfirstbook/: _toc.yml  biletebi.ipynb  info.ipynb  results.csv
myfirstbook/_build/.doctrees/: biletebi.doctree  environment.pickle  info.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: .buildinfo  biletebi.html  genindex.html  info.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
myfirstbook/_build/html/_sources/: info.ipynb
myfirstbook/_build/jupyter_execute/: biletebi.ipynb  info.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
