[tool.poetry]
name = "scraped-data"
version = "0.1.0"
description = ""
authors = ["Ilia Arkania <89490126+Naviamold1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^1.0.3"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
